--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
   color: white;
 }
 
+h1 {
+  font-family: 'Roboto', sans-serif;
+}
+
 header {
   display: flex;
   justify-content: center;
