--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 body {
   background-color: darksalmon;
   color: white;
@@ -5,10 +9,20 @@ body {
 
 h1 {
   font-family: 'Roboto', sans-serif;
+  font-weight: 700;
 }
 
 header {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#logo {
+  height: 50px;
+  padding-right: 1rem;
+}
+
+li {
+  font-family: Arial, Helvetica, sans-serif;
 }
