--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body {
   background-color: darksalmon;
   color: white;
+  margin: 0 8rem;
 }
 
 h1 {
@@ -16,6 +17,8 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 8rem;
+  font-size: xx-large;
 }
 
 #logo {
