--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1 {
 
 header {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 8rem;
@@ -24,6 +25,7 @@ header {
 #logo {
   height: 50px;
   padding-right: 1rem;
+  padding-bottom: 1rem;
 }
 
 li {
