added function to display table head hours

--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ header {
   padding-bottom: 1rem;
 }
 
-li {
+table {
+  margin-top: 3rem;
+}
+
+td {
   font-family: Arial, Helvetica, sans-serif;
+  min-width: 5rem;
+  text-align: center;
+  /* border: thin solid black */
 }
