--- a/style.css
+++ b/style.css
@@ -42,3 +42,12 @@ thead {
 tbody {
   border: thin solid black
 }
+
+td {
+  min-width: 5rem;
+  border: thin solid black;
+}
+
+tr {
+  height: 2rem;
+}
