--- a/sales-style.css
+++ b/sales-style.css
@@ -45,6 +45,12 @@ a:hover {
   padding-bottom: 1rem;
 }
 
+form {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
 table {
   margin-top: 3rem;
   font-family: Arial, Helvetica, sans-serif;
